Using Arrays.asList instead